# magnis

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  eslint.config.mjs  index.json  llms.txt  package.json  tsconfig.base.json  vitest.config.ts
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docs/: architecture.md  engines.md  git-workflow.md  graph.md  principles.md  use-cases.md
docs/plugins/: README.md  architecture.md  backend-module.md  building-with-an-agent.md  cross-module-hub.md  dev-loop.md  manifest.md  module.md  source.md  structure.md  ui.md  write-a-module.md
evals/: README.md
evals/integration-authoring/: README.md
evals/integration-authoring/data/: blind-review-arm-map.tsv  blind-review-judge1.json  blind-review-judge2.json  blind-review-judge3.json  blind-review-scores.md
plugins/modules/companies/: README.md  manifest.json  manifest.toml  package.json  schema.ts  types.ts
plugins/modules/companies/module/: companiesRead.test.ts  helpers.ts  index.ts  service.ts
plugins/modules/companies/schemas/: company.details.json  company.email.json
plugins/modules/companies/types/: index.ts
plugins/modules/companies/ui/: CompanyCreateRenderer.tsx  CompanyDetailContent.tsx  CompanyInfoColumn.tsx  CompanyListItemContent.tsx  CompanyOverview.tsx  EntityCards.tsx  helpers.ts  index.tsx  queries.ts  store.ts  types.ts
plugins/modules/contacts/: README.md  manifest.json  manifest.toml  package.json  schema.ts  tsconfig.json  types.ts
plugins/modules/contacts/module/: contactsIngest.test.ts  contactsRead.test.ts  helpers.ts  (+5 more)
plugins/modules/email/: README.md  manifest.json  manifest.toml  package.json  schema.ts
plugins/modules/file/: manifest.json  manifest.toml  package.json  schema.ts  tsconfig.json  types.ts
plugins/modules/linkedin/: README.md  manifest.json  manifest.toml  package.json  schema.ts  tsconfig.json  types.ts
plugins/modules/meetings/: README.md  manifest.json  manifest.toml  package.json  schema.ts  tsconfig.json
plugins/modules/notes/: manifest.json  manifest.toml  package.json  schema.ts  types.ts
plugins/modules/projects/: README.md  manifest.json  manifest.toml  package.json  schema.ts  tsconfig.json
plugins/modules/telegram/: README.md  manifest.json  manifest.toml  package.json  schema.ts  types.ts
plugins/modules/triggers/: README.md  manifest.json  manifest.toml  package.json  schema.ts  types.ts
plugins/modules/x/: README.md  manifest.json  manifest.toml  package.json  schema.ts  types.ts
plugins/sources/_statemachine/: Cargo.toml  package.json
plugins/sources/_statemachine/src/: index.test.ts  index.ts  main.rs
plugins/sources/anysite/: README.md  package.json  tsconfig.json
plugins/sources/google/: Cargo.toml  README.md  config.default.toml  manifest.toml  package.json  tsconfig.json
plugins/sources/google-ts/: manifest.toml  package.json
plugins/sources/google/auth/: screen.tsx
plugins/sources/google/src/: auth.rs  calendar.rs  calendar.ts  connector.ts  contacts.rs  contacts.test.ts  contacts.ts  fixture.rs  fixture.ts  gmail.rs  gmail.test.ts  gmail.ts  helpers.ts  http.test.ts  http.ts  main.rs  main.ts  mime.rs  oauth.test.ts  oauth.ts  oauth_exchange.rs  progress.rs  progress.ts  schema.ts  serde-parity.test.ts  surfaces.rs  tools.rs  validate.ts
plugins/sources/google/src/__tests__/: fixture.test.ts  googleContract.test.ts  serde-parity.test.ts
plugins/sources/google/src/surfaces/contacts/: contacts.test.ts  contacts.ts  schema.ts
plugins/sources/google/src/surfaces/email/: gmail.test.ts  gmail.ts
plugins/sources/google/src/surfaces/meetings/: calendar.test.ts  calendar.ts  schema.ts
plugins/sources/google/tests/: mcp_server.rs
plugins/sources/linkedin/: README.md  manifest.toml  package.json
plugins/sources/local/: Cargo.toml  README.md  manifest.toml  package.json
plugins/sources/local/src/: connector.ts  fetch.ts  main.rs  main.ts  scan.ts
plugins/sources/local/src/surfaces/notes/: fetch.test.ts  fetch.ts  scan.ts
plugins/sources/local/tests/: mcp_server.rs
plugins/sources/mock-gmail/: Cargo.toml  README.md  manifest.toml  package.json
plugins/sources/mock-gmail/src/: fetch.test.ts  fetch.ts  http.ts  inject.ts  main.rs  main.ts  store.ts
plugins/sources/mock-gmail/tests/: mcp_server.rs
plugins/sources/mock-linkedin/: README.md  manifest.toml  package.json
plugins/sources/mock-statemachine-key/: manifest.toml  package.json
plugins/sources/mock-statemachine-oauth/: README.md  manifest.toml  package.json
plugins/sources/mock-statemachine-phone/: README.md  manifest.toml  package.json
plugins/sources/mock-telegram/: Cargo.toml  README.md  manifest.toml  package.json
plugins/sources/mock-telegram/src/: envelope.ts  fetch.test.ts  fetch.ts  http.ts  main.rs  main.ts  store.ts
plugins/sources/mock-telegram/tests/: mcp_server.rs
plugins/sources/mock-x/: README.md  manifest.toml  package.json
plugins/sources/telegram/: Cargo.toml  README.md  config.default.toml  manifest.toml  package.json
plugins/sources/telegram-ts/: manifest.toml  package.json
plugins/sources/telegram/auth/: index.tsx  screen.tsx
plugins/sources/telegram/src/: auth.rs  auth.ts  client.rs  client.test.ts  client.ts  commands.rs  commands.test.ts  commands.ts  dispatch.ts  envelope.rs  envelope.ts  execute.test.ts  fixture.rs  fixture.test.ts  fixture.ts  live.ts  main.rs  main.ts  schema.ts  sessions.rs  subscriptions.rs  subscriptions.ts  tools.rs
plugins/sources/telegram/src/surfaces/telegram/: commands.test.ts  commands.ts  envelope.test.ts  envelope.ts  execute.test.ts  fixture.ts  schema.ts
plugins/sources/telegram/tests/: mcp_server.rs
plugins/sources/x/: README.md  manifest.toml  package.json
plugins/sources/x-mcp/: README.md  manifest.toml
scripts/: build-catalog-index.ts  build-plugins.test.ts  build-plugins.ts  diff-connectors.ts  module-bundle.test.ts  plugin-host-imports.json  plugin-new.test.ts  plugin-new.ts  test-connectors.sh  tsconfig.json  typecheck-all.sh
scripts/fixtures/parity/: google.json  telegram.json
(+321 files in other folders)
