# The PLUGIN-TREE cargo workspace (plugins-public-repo DEC-3): the Rust
# source connectors + the MCP testkit build standalone — this whole tree is
# exported to the public `0xmikko/magnis` repo, where it must compile with
# nothing but itself. The closed root workspace excludes `plugins/` and
# builds this one via `cargo --manifest-path plugins/Cargo.toml`.
[workspace]
members = [
    "packages/mcp-testkit",
    "plugins/sources/google",
    "plugins/sources/telegram",
    "plugins/sources/local",
    "plugins/sources/mock-gmail",
    "plugins/sources/mock-telegram",
    "plugins/sources/_statemachine",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Magnis Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
uuid = { version = "1.10", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.39", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
futures = "0.3"
grammers-client = "0.7"
grammers-session = "0.7"
grammers-tl-types = "0.7"
reqwest = { version = "0.12", features = ["json"] }

# ── Dependency yank workaround (Telegram chain) ──────────────────────
# `grammers-crypto` → `glass_pumpkin ^1.6.0` → `core2 ^0.4`, but core2 0.4.0
# was YANKED from crates.io; core2's git `main` IS 0.4.0 (untagged), so pin
# via git — git sources are not subject to crates.io yanks. KEEP-ALIGNED with
# the closed root workspace's identical patch.
[patch.crates-io]
core2 = { git = "https://github.com/technocreatives/core2", rev = "545e84bcb0f235b12e21351e0c69767958efe2a7" }
