[package]
name = "magnis-source-google"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

# The connector binary the Magnis host spawns (manifest.toml `command`). Named
# without the crate prefix so the manifest + deploy refer to it as `magnis-google`.
[[bin]]
name = "magnis-google"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
base64 = "0.22"
# Stable per-Person id for the contacts surface (SHA-256 of People API
# resource_name → first 16 hex chars). Workspace doesn't declare sha2
# yet; pin here.
sha2 = "0.10"

[dev-dependencies]
magnis-mcp-testkit = { path = "../../../packages/mcp-testkit" }
tokio = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
