[package]
name = "magnis-source-local"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "magnis-local"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
magnis-mcp-testkit = { path = "../../../packages/mcp-testkit" }
tokio = { workspace = true }
serde_json = { workspace = true }
