[package]
name = "magnis-source-telegram"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

# The connector binary the Magnis host spawns (manifest.toml `command`). Named
# without the crate prefix so the manifest + deploy refer to it as `magnis-telegram`.
[[bin]]
name = "magnis-telegram"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
grammers-client = { workspace = true }
grammers-session = { workspace = true }
grammers-tl-types = { workspace = true }
base64 = "0.22"

[dev-dependencies]
magnis-mcp-testkit = { path = "../../../packages/mcp-testkit" }
tokio = { workspace = true }
serde_json = { workspace = true }
# For constructing a synthetic grammers RpcError in the auth-classification test
# (grammers-client re-exports InvocationError but not RpcError).
grammers-mtsender = "0.7"
